# FeedForge

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  SPEC.md
.cursor/skills/feedforge-adoption/: SKILL.md  examples.md  reference.md
.cursor/skills/feedforge-pipeline-authoring/: SKILL.md  examples.md  reference.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  fuzz-smoke.yml
assets/: feedforge-demo.tape
benchmarks/: CMakeLists.txt  benchmark.py  benchmark_support.cpp  benchmark_support.hpp  build_config.hpp.in  feedforge_benchmark.cpp
cmake/: FeedForgeConfig.cmake.in  FeedForgeGenerate.cmake  FeedForgeOutputGuard.cmake  FeedForgeWarnings.cmake
cmake/toolchains/: s390x-linux-gnu.cmake
docs/: adding-a-backend.md  adoption.md  architecture.md  benchmarking.md  compatibility.md  compiler-cli.md  compiler-limits.md  conformance-bundle.md  development.md  ff-700-evidence.md  generated-api.md  optimization-log.md  performance-case-study.md  pipeline-format.md  release-audit.md  requirements-traceability.md  schema-audit.md  schema-format.md  security-model.md  testing.md  vcpkg.md
docs/adr/: 0001-tomlplusplus.md
examples/: CMakeLists.txt  replay_binary_file.cpp  synthetic_order_events.cpp
examples/consumer-template/: CMakeLists.txt  README.md  custom_main.cpp  custom_pipeline.toml  main.cpp
fuzz/: CMakeLists.txt  compiler_fuzz_support.hpp  fuzz_binary_file.cpp  fuzz_compiler_compile.cpp  fuzz_compiler_pipeline.cpp  fuzz_compiler_schema.cpp  fuzz_decode_one.cpp  fuzz_differential_decode.cpp  fuzz_replay.cpp  fuzz_support.hpp  generate_corpus.cmake
fuzz/corpus/: README.md
fuzz/corpus/binary_file/: empty-complete.hex  frame-complete.hex  frame-incomplete.hex  multiple-frames-complete.hex  truncated-payload.hex  truncated-prefix.hex  zero-marker-trailing.hex
fuzz/corpus/decode_one/: invalid-message-size.hex  unknown-message-type.hex
fuzz/corpus/replay/: invalid-message-size.hex  unknown-message-type.hex
include/feedforge/: config.hpp  flow.hpp  result.hpp  version.hpp
include/feedforge/framing/: binary_file.hpp
include/feedforge/profile/: concepts.hpp  portable_checked.hpp
include/feedforge/types/: ascii.hpp  decimal.hpp  identifiers.hpp  timestamp.hpp
include/feedforge/wire/: load_big_endian.hpp
packaging/vcpkg/ports/feedforge/: portfile.cmake  vcpkg.json
packaging/vcpkg/tests/: run_overlay.cmake  validate_metadata.cmake
packaging/vcpkg/tests/compiler/: vcpkg.json
packaging/vcpkg/tests/runtime/: vcpkg.json
pipelines/: all_messages.toml  order_events.toml
schemas/: sources.lock.toml
schemas/nasdaq/: totalview_itch_5_0.toml
src/feedforgec/: CMakeLists.txt  atomic_output.cpp  atomic_output.hpp  compiler_limits.hpp  diagnostics.cpp  diagnostics.hpp  emit_cpp.cpp  emit_cpp.hpp  ir.cpp  ir.hpp  lower.cpp  lower.hpp  main.cpp  model.cpp  model.hpp  parse_toml.cpp  parse_toml.hpp  sha256.cpp  sha256.hpp
tests/: CMakeLists.txt  test_support.hpp
tests/compiler/: cli_atomic.cmake  emitter.cpp  frontend.cpp  validation_identifiers_diagnostics.cpp  validation_limits.cpp  validation_pipeline_grammar.cpp  validation_pipeline_semantics.cpp  validation_schema_grammar.cpp  validation_schema_layout.cpp  validation_schema_types.cpp  validation_test_support.hpp  version.cmake
tests/conformance/: test_bundle.py
tests/consumer/: CMakeLists.txt  custom_pipeline.toml  generated_main.cpp  main.cpp  run_installed.cmake
tests/fixtures/compiler/: invalid_pipeline_wildcard.toml  invalid_schema_unknown_key.toml  valid.ffir.json  valid_pipeline.toml  valid_pipeline_reordered.toml  valid_schema.toml  valid_schema_reordered.toml
tests/fixtures/hardening/: unknown_skip_pipeline.toml
tests/fixtures/itch50/: 01_system_event.toml  02_stock_directory.toml  03_stock_trading_action.toml  04_reg_sho_restriction.toml  05_market_participant_position.toml  06_mwcb_decline_level.toml  07_mwcb_status.toml  08_ipo_quoting_period_update.toml  09_luld_auction_collar.toml  10_operational_halt.toml  11_add_order.toml  12_add_order_mpid.toml  13_order_executed.toml  14_order_executed_with_price.toml  15_order_cancel.toml  16_order_delete.toml  17_order_replace.toml  18_trade.toml  19_cross_trade.toml  20_broken_trade.toml  21_net_order_imbalance_indicator.toml  22_retail_price_improvement_indicator.toml  23_direct_listing_with_capital_raise.toml
tests/golden/: compile_fail_ambiguous_sink.cpp  compile_fail_missing_sink.cpp  compile_fail_throwing_sink.cpp  compile_fail_wrong_result_sink.cpp  generated_semantics.cpp  synthetic_pipeline.hpp
tests/hardening/: allocation.cpp  no_exceptions_rtti.cpp  rtsan_smoke.cpp  status_branches.cpp  unknown_skip.cpp
tests/integration/: chunked_replay.cpp  compare_generated_layouts.cmake  conformance_bundle.cpp  generated_headers_compile.cpp  itch50_end_to_end.cpp
tests/reference/: README.md  itch50_differential.hpp  itch50_oracle.hpp  itch50_oracle_self_test.cpp
tests/unit/: binary_file.cpp  chunked_binary_file.cpp  runtime_primitives.cpp
tools/: generate_conformance_bundle.py  release_assets.py  release_assets_test.py
